# ibus-unikey

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  ibus-unikey.spec.in
.github/workflows/: commit.yml  regression.yaml
.requirement.d/: debian
cmake/: GSettings.cmake
data/: CMakeLists.txt  Makefile.am  org.freedesktop.ibus.engine.unikey.gschema.xml
debian/: changelog  control  copyright  rules
icons/: Makefile.am  Makefile.in
m4/: Makefile.am  Makefile.in
po/: CMakeLists.txt  ChangeLog  Makevars  POTFILES.in  ibus-unikey.pot  vi.po
setup/: CMakeLists.txt  Makefile.am  config_utils.cpp  config_utils.h  dlg_macro_table.cpp  dlg_macro_table.h  dlg_main_setup.cpp  dlg_main_setup.h  ibus-unikey.ui  macro_utils.cpp  macro_utils.h  main.cpp  setup-macro.glade  setup-macro.ui  setup-main.glade  setup-main.ui  setup.cpp  signal_handlers.cpp  signal_handlers.h  unikey_setup.cpp
src/: CMakeLists.txt  Makefile.am  Makefile.in  engine.cpp  engine.h  engine_const.h  engine_private.h  main.cpp  unikey.xml.in  unikey.xml.in.in  utils.cpp  utils.h
src/config/: CMakeLists.txt  unikey_config.cpp  unikey_config.h
tests/: README.MD
tests/gedit/: test_use_keyboard_for_typing.py
tests/gedit/steps/: 0000_install_gedit_for_testing.sh  0001_install_mate_terminal.sh  0001_verify_unikey_without_valgrind.sh  0002_copy_test_cases_to_test_machine.sh  0003_verify_unikey_without_valgrind.sh  9999_clear_everything_after_finish.sh
tests/pipeline/: build.sh  prepare.sh  test.sh
tests/pipeline/environments/: ubuntu
tests/pipeline/libraries/: Console.sh
tools/utilities/: generate-customized-livecd-image.sh
ukengine/: CMakeLists.txt  Makefile.am  Makefile.in  README  byteio.cpp  byteio.h  charset.cpp  charset.h  convert.cpp  data.cpp  data.h  error.cpp  inputproc.cpp  inputproc.h  keycons.h  mactab.cpp  mactab.h  pattern.cpp  pattern.h  prehdr.h  stdafx.h  ukengine.cpp  ukengine.h  unikey.cpp  unikey.h  usrkeymap.cpp  usrkeymap.h  vnconv.h  vnlexi.h
ukengine/diff/: byteio.cpp.diff  charset.cpp.diff  convert.cpp.diff  data.cpp.diff  inputproc.cpp.diff  mactab.cpp.diff  pattern.cpp.diff  ukengine.cpp.diff  ukengine.h.diff  unikey.cpp.diff  unikey.h.diff  usrkeymap.cpp.diff  vnconv.h.diff
