EXTRA_DIST                  = diff README COPYING

#unikey_zmoddir              = ${libdir}
noinst_LTLIBRARIES     = libunikey-zmod.la

libunikey_zmod_la_SOURCES = \
	byteio.cpp \
	byteio.h \
	charset.cpp \
	charset.h \
	convert.cpp \
	data.cpp \
	data.h \
	error.cpp \
	inputproc.cpp \
	inputproc.h \
	keycons.h \
	mactab.cpp \
	mactab.h \
	pattern.cpp \
	pattern.h \
	ukengine.cpp \
	ukengine.h \
	unikey.cpp \
	unikey.h \
	usrkeymap.cpp \
	usrkeymap.h \
	vnconv.h \
	vnlexi.h

